--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -13,7 +13,12 @@
           <h5 class="card-title"><%= contact.nama %></h5>
           <h6 class="card-subtitle mb-2 text-body-secondary"><%= contact.noHp %></h6>
           <p class="card-text"><%= contact.email %></p>
-          <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm('Apakah anda yakin hapus contact ini?')"> Hapus</a>
+
+          <form action="/contact?_method=DELETE" method="post" class="d-inline">
+            <input type="hidden" name="nama" value="<%= contact.nama %>" />
+            <button type="submit" class="btn btn-danger badge" onclick="return('yakin?')">Hapus</button>
+          </form>
+
           <a href="/contact/edit/<%= contact.nama %>" class="btn btn-primary badge"> Edit</a>
           <a href="/contact" class="card-link d-block mt-3"><i class="bi bi-skip-backward"></i> Kembali ke list contact</a>
         </div>
